--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-ian's website
+ ___
+(__ `-._                _____
+   `-._ `-._          .'     `.
+       `-._ `-._     .=========.
+           `._ /`-..-          .
+              `-._             .
+                  `-.._______.'
+
+~~~ ceci n'est pas une pipe ~~~
