--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
- ___ <br>
-(__ `-._                _____ <br>
-   `-._ `-._          .'     `. <br>
-       `-._ `-._     .=========. <br>
-           `._ /`-..-          . <br>
-              `-._             . <br>
-                  `-.._______.' <br>
-<br>
-~~~ ceci n'est pas une pipe ~~~ <br>
+ceci n'est pas une website
