--- a/index.html
+++ b/index.html
@@ -1,1 +1,271 @@
-ceci n'est pas une website
+<!DOCTYPE html>
+<html>
+<title>ian's website</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="./w3.css">
+<link rel="stylesheet" href="./fonts.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "JetBrainsMono"}
+body, html {
+  height: 100%;
+  background-color:#DADDD8;
+  line-height: 1.8;
+}
+
+/* Create a Parallax Effect */
+.bgimg-1, .bgimg-2{
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* First image  */
+.bgimg-1 {
+  background-image: url(./images/DSC01908edit.jpg);
+  min-height: 100%;
+}
+
+/* Second image */
+.bgimg-2 {
+  background-image: url(./images/DSC03453.jpg);
+  min-height: 400px;
+}
+
+
+.w3-wide {letter-spacing: 10px;}
+.w3-hover-opacity {cursor: pointer;}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 800px) {
+  .bgimg-1, .bgimg-2 {
+    background-attachment: scroll;
+    min-height: 400px;
+  }
+}
+</style>
+<body>
+
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar" id="myNavbar">
+    <a href="#home" class="w3-bar-item w3-button">HOME</a>
+    <a href=./about/index.html class="w3-bar-item w3-button">ABOUT</a>
+    <a href="#photos" class="w3-bar-item w3-button">PHOTOGRAPHY</a>
+    <a href=./research/index.html class="w3-bar-item w3-button">RESEARCH</a>
+    <a href=./blog/index.html class="w3-bar-item w3-button">BLOG</a>
+  </div>
+
+  <!-- Navbar on small screens -->
+  <div id="navDemo" class="w3-bar-block w3-hide w3-hide-large w3-hide-medium">
+    <a href="#home" class="w3-bar-item w3-button">HOME</a>
+    <a href=./about/index.html class="w3-bar-item w3-button">ABOUT</a>
+    <a href="#photos" class="w3-bar-item w3-button">PHOTOGRAPHY</a>
+    <a href=./research/index.html class="w3-bar-item w3-button">RESEARCH</a>
+    <a href=./blog/index.html class="w3-bar-item w3-button">BLOG</a>
+  </div>
+</div>
+
+<!-- First Parallax Image with Logo Text -->
+<div class="bgimg-1 w3-display-container w3-daddd8 w3-opacity-min" id="home">
+  <div class="w3-display-middle" style="white-space:nowrap;">
+    <span class="w3-center w3-padding-large w3-22525c w3-xlarge w3-wide w3-animate-opacity">IAN'S <span class="w3-hide-small">DUMBASS</span> SHIT</span>
+  </div>
+</div>
+
+<!-- Container (About Section) -->
+<div class="w3-content w3-container w3-padding-64 w3-daddd8">
+  <h3 class="w3-center">ABOUT ME</h3>
+  <p class="w3-center"><em>I would like to die!</em></p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+    qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+  <a href="./about/index.html" class="w3-button w3-right w3-padding-large w3-22525c w3-hover-212c30" style="margin-right:64px">MORE</a>
+
+</div>
+
+<div class="w3-row w3-center w3-212c30 w3-padding-16">
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">12+</span><br>
+    NUMBERS
+  </div>
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">36 Hours</span><br>
+    COULD
+  </div>
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">273.15</span><br>
+    GO HERE
+  </div>
+  <div class="w3-quarter w3-section">
+    <span class="w3-xlarge">69</span><br>
+    NICE
+  </div>
+</div>
+
+<!-- Second Parallax Image with Portfolio Text -->
+<div class="bgimg-2 w3-display-container w3-opacity-min" id="photos">
+  <div class="w3-display-middle">
+    <span class="w3-xxlarge w3-text-daddd8 w3-wide">PHOTOGRAPHY</span>
+  </div>
+</div>
+
+<!-- Container (Portfolio Section) -->
+<div class="w3-content w3-container w3-daddd8 w3-padding-64" id="portfolio">
+  <h3 class="w3-center">DIGITAL</h3>
+  <p class="w3-center w3-daddd8"><em>Some pictures of my favorite people and my favorite places.</em></p><br>
+
+  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+  <div class="w3-row-padding w3-center">
+    <div class="w3-col m3">
+      <img src=./images/DSC03453.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="salt creek falls, oregon">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/DSC03889-1.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="oregon coast range">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/DSC04432.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="indian ridge, oregon">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/DSC01908edit.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="moraine lake, oregon">
+    </div>
+  </div>
+
+  <div class="w3-row-padding w3-center w3-section">
+    <div class="w3-col m3">
+      <img src=./images/DSC05132.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="füssen, bavaria">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/DSC05259_1.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="hobbit beach, oregon">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/LRM_EXPORT_97922554519571_20190830_180046243.jpeg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="eugene, oregon">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/DSC05328_1.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="hobbit beach, oregon">
+    </div>
+    <a href="./digital/index.html" class="w3-button w3-padding-large w3-22525c w3-hover-212c30" style="margin-top:64px">LOAD MORE</a>
+  </div>
+
+  <h3 class="w3-center">ANALOG</h3>
+  <p class="w3-center"><em>Documenting my techological regression into a photographic luddite. <br> Comming soon: a daguerreotype section.</em></p><br>
+
+  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+  <div class="w3-row-padding w3-center">
+    <div class="w3-col m3">
+      <img src=./images/i00.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="mt. hood, oregon">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/i0.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="mt. hood, oregon">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/j3ice.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="mount washington wilderness, oregon">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/l00ice.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="coffee">
+    </div>
+  </div>
+
+  <div class="w3-row-padding w3-center w3-section">
+    <div class="w3-col m3">
+      <img src=./images/l1ice.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="coffee">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/i2.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="karm">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/i8.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="aidan">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/i9.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="seattle, washington">
+    </div>
+
+  <div class="w3-row-padding w3-center w3-section">
+    <div class="w3-col m3">
+      <img src=./images/i15.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="drunk">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/i16.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="drunk">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/i23.jpg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="seattle, washington">
+    </div>
+
+    <div class="w3-col m3">
+      <img src=./images/LRM_EXPORT_181844176761776_20190717_125725817.jpeg style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="sweet creek falls, oregon">
+    </div>
+    <a href="./analog/index.html" class="w3-button w3-padding-large w3-22525c w3-hover-212c30" style="margin-top:64px">LOAD MORE</a>
+  </div>
+</div>
+
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-daddd8" onclick="this.style.display='none'">
+  <span class="w3-button w3-large w3-daddd8 w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+  </div>
+</div>
+
+<!-- Footer -->
+ 
+<footer class="w3-container w3-center w3-margin-top">
+  <p>Please, whatever you do, don't contact me online.</p>
+  <a style="text-decoration:none" href="https://www.linkedin.com/in/iankbania" class="fa fa-linkedin w3-large w3-hover-opacity"></a>
+  <a style="text-decoration:none" href="https://github.com/deionizedoatmeal" class="fa fa-github  w3-large w3-hover-opacity"></a>
+  <a style="text-decoration:none" href="mailto:ian.k.bania@gmail.com" class="fa fa-envelope w3-large w3-hover-opacity"></a>
+  <a style="text-decoration:none" href="https://www.instagram.com/iankbania/" class="fa fa-instagram w3-large w3-hover-opacity"></a>
+</footer>
+
+
+<!-- Scripts -->
+<script>
+// Modal Image Gallery
+function onClick(element) {
+  document.getElementById("img01").src = element.src;
+  document.getElementById("modal01").style.display = "block";
+  var captionText = document.getElementById("caption");
+  captionText.innerHTML = element.alt;
+}
+
+// Change style of navbar on scroll
+window.onscroll = function() {myFunction()};
+function myFunction() {
+    var navbar = document.getElementById("myNavbar");
+    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-22525c";
+    } else {
+        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-22525c", "");
+    }
+}
+
+// Used to toggle the menu on small screens when clicking on the menu button
+function toggleFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else {
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+</script>
+</body>
+</html>
